<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>

    <string name="nomeUser">Nome do Usuario</string>
    <string name="nomeLista">Nome da Lista</string>
    <string name="nomeItem">Nome do Item</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor">Valor</string>

    <string name="cadastroIncorreto">Usuario ou senha incorretos</string>
    <string name="usuarioJaExiste">Usuario já existe</string>
    <string name="listaJaExiste">Lista já existe</string>
    <string name="usuarioIncorreto">Usuario incorreto</string>
    <string name="senhaIncorreta">Senha incorreta</string>
    <string name="usuarioVazio">Nome está vazio</string>
    <string name="usuarioPequeno">Usuario deve ter mais de 4 caracteres ou mais</string>
    <string name="senhaVazia">Senha está vazia</string>
    <string name="senhaPequena">Senha deve ter 5 caracteres ou mais</string>

    <string name="exNomeUser">Digite seu nome</string>
    <string name="exNomeItem">Ex. Frango</string>
    <string name="exNomeLista">Ex. Mercado</string>
    <string name="exQntd">Ex. 3 pct</string>
    <string name="exValor">Ex. 2,50</string>

    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnDeletar">Deletar</string>
</resources>