<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DodgerBlue"
    tools:context=".views.EditarItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloCampoNomeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/nomeItem"
                android:textColor="@color/white" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/etNomeItemEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:textColorHint="@color/cinza"
                    android:hint="@string/exNomeItem"
                    android:inputType="textPersonName" />
            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloCampoQntd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/quantidade" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white">

                <EditText
                    android:id="@+id/etQuantidadeEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:textColorHint="@color/cinza"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:hint="@string/exQntd"
                    android:inputType="textPersonName" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSalvarEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/limeGreen"
                android:ems="10"
                android:gravity="center"
                android:text="@string/btnSalvar" />

            <Button
                android:id="@+id/btnDeleteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/vermelho"
                android:ems="10"
                android:gravity="center"
                android:text="@string/btnDeletar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>