<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:background="@color/DodgerBlue"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:srcCompat="@mipmap/icone" />

        <FrameLayout
            android:id="@+id/FLetLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/etLoginL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textPersonName" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginBottom="30dp" >

            <EditText
                android:id="@+id/etSenhaL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </FrameLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/azul"
            android:ems="10"
            android:text="@string/btnEntrar" />

        <Button
            android:id="@+id/btnCadastrarL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/limeGreen"
            android:gravity="center"
            android:ems="10"
            android:text="@string/btnCadastrar" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>