<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DodgerBlue"
    tools:context=".views.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/FLetLoginC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:background="@drawable/customborder"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/etLoginC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/nome"
                android:textColorHint="@color/cinza"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textPersonName" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/customborder"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="30dp" >

            <EditText
                android:id="@+id/etSenhaC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@color/cinza"
                android:backgroundTint="@color/white"
                android:hint="@string/senha"
                android:ems="10"
                android:inputType="textPassword" />
        </FrameLayout>

        <Button
            android:id="@+id/btnCadastrarC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/limeGreen"
            android:ems="10"
            android:text="@string/btnCadastrar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>